...
                    .bold()
                    .padding(.bottom, .xxxSmall)
            }
            
            Text(species.scientificName)
                .font(.subheadline)
                .accessibilityIdentifier("speciesDetail.scientificName")
                .italic()
                .foregroundStyle(.secondary)
                .padding(.bottom, .xxSmall)
            
            HStack(spacing: .xSmall) {
                Badge(
...
